force-app/main/default/objects/Contact/fields/SingletrackCMS__App_AccessPass_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__App_AccessPass_Id__c</fullName>
    <label>DEPRECATED - App AccessPass Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>