force-app/main/default/objects/Contact/fields/SingletrackCMS__App_AccessPass_Max_Issued__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__App_AccessPass_Max_Issued__c</fullName>
    <label>DEPRECATED - App AccessPass Max Issued</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>