force-app/main/default/objects/Contact/fields/SingletrackCMS__App_AccessPass_Status__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__App_AccessPass_Status__c</fullName>
    <label>DEPRECATED - App AccessPass Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>