force-app/main/default/objects/Contact/fields/SingletrackCMS__BBG_UUID__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__BBG_UUID__c</fullName>
    <label>Bloomberg User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>