force-app/main/default/objects/Contact/fields/SingletrackCMS__Blocked__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>