force-app/main/default/objects/Contact/fields/SingletrackCMS__Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Blocked_Reason__c</fullName>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>