force-app/main/default/objects/Contact/fields/SingletrackCMS__Blocked_Summary__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Blocked_Summary__c</fullName>
    <formula>IF(SingletrackCMS__Number_of_Failed_Emails__c &gt; 0, &quot;Not received &quot; &amp; TEXT(SingletrackCMS__Number_of_Failed_Emails__c) &amp; &quot; emails over &quot; &amp; TEXT(FLOOR(NOW() - SingletrackCMS__First_Bounce_Datetime__c)) &amp; &quot; calendar days&quot;, &quot;&quot;)</formula>
    <label>Blocked Summary</label>
    <type>Text</type>
</CustomField>