force-app/main/default/objects/Contact/fields/SingletrackCMS__Blocked_Type__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Blocked_Type__c</fullName>
    <label>Blocked Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Transient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>