force-app/main/default/objects/Contact/fields/SingletrackCMS__Blue_Matrix_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Blue_Matrix_Id__c</fullName>
    <label>Blue Matrix Reader Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>