force-app/main/default/objects/Contact/fields/SingletrackCMS__Bounce_Summary__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Bounce_Summary__c</fullName>
    <formula>IF(SingletrackCMS__Number_of_Failed_Emails__c &gt; 0, &quot;Not received &quot; &amp; TEXT(SingletrackCMS__Number_of_Failed_Emails__c) &amp; &quot; emails over &quot; &amp; TEXT((TODAY() - DATEVALUE(SingletrackCMS__First_Bounce_Datetime__c)) + 1) &amp; &quot; calendar days&quot;, &quot;&quot;)</formula>
    <label>Bounce Summary</label>
    <type>Text</type>
</CustomField>