force-app/main/default/objects/Contact/fields/SingletrackCMS__Call_List_Priority__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Call_List_Priority__c</fullName>
    <formula>3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call List Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>