force-app/main/default/objects/Contact/fields/SingletrackCMS__CapIQ_User_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__CapIQ_User_Id__c</fullName>
    <label>Cap IQ User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>