force-app/main/default/objects/Contact/fields/SingletrackCMS__Contact_Blocked__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Contact_Blocked__c</fullName>
    <formula>SingletrackCMS__Blocked__c</formula>
    <label>Contact Blocked</label>
    <type>Checkbox</type>
</CustomField>