force-app/main/default/objects/Contact/fields/SingletrackCMS__Contact_Coverage_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Contact_Coverage_User_Ids__c</fullName>
    <label>Contact Coverage User Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>