force-app/main/default/objects/Contact/fields/SingletrackCMS__Default_Interaction_Role__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Default_Interaction_Role__c</fullName>
    <label>Default Interaction Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SingletrackCMS__Interaction_Roles</valueSetName>
    </valueSet>
</CustomField>