force-app/main/default/objects/Contact/fields/SingletrackCMS__Email_2__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Email_2__c</fullName>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>