force-app/main/default/objects/Contact/fields/SingletrackCMS__Exclude_from_SMail__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Exclude_from_SMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from SMail</label>
    <type>Checkbox</type>
</CustomField>