force-app/main/default/objects/Contact/fields/SingletrackCMS__Factset_Reader_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Factset_Reader_Id__c</fullName>
    <label>Factset Reader Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>