force-app/main/default/objects/Contact/fields/SingletrackCMS__First_Bounce_Datetime__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__First_Bounce_Datetime__c</fullName>
    <label>First Bounce Datetime</label>
    <type>DateTime</type>
</CustomField>