force-app/main/default/objects/Contact/fields/SingletrackCMS__Has_Address__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Has_Address__c</fullName>
    <formula>NOT(ISBLANK(SingletrackCMS__Address__c))</formula>
    <label>Has Address</label>
    <type>Checkbox</type>
</CustomField>