force-app/main/default/objects/Contact/fields/SingletrackCMS__Has_Coverages__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Has_Coverages__c</fullName>
    <formula>IF(CONTAINS(SingletrackCMS__Contact_Coverage_User_Ids__c  , $User.Alias + &apos;;&apos;) == TRUE , &apos;TRUE&apos; , &apos;FALSE&apos;)</formula>
    <label>Covered by Me</label>
    <type>Text</type>
</CustomField>