force-app/main/default/objects/Contact/fields/SingletrackCMS__Interaction_Role__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Interaction_Role__c</fullName>
    <label>Interaction Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>