force-app/main/default/objects/Contact/fields/SingletrackCMS__Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Activity__c</fullName>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>