force-app/main/default/objects/Contact/fields/SingletrackCMS__Last_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Call_Id__c</fullName>
    <label>Last Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>