force-app/main/default/objects/Contact/fields/SingletrackCMS__Last_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Call_Type__c</fullName>
    <label>Last Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>