force-app/main/default/objects/Contact/fields/SingletrackCMS__Last_Download_Action__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Download_Action__c</fullName>
    <label>Last Download Action</label>
    <type>DateTime</type>
</CustomField>