force-app/main/default/objects/Contact/fields/SingletrackCMS__Latest_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Latest_Bounce_Reason__c</fullName>
    <label>Latest Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>