force-app/main/default/objects/Contact/fields/SingletrackCMS__MAR_Email__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__MAR_Email__c</fullName>
    <label>MAR Email Address</label>
    <type>Email</type>
</CustomField>