force-app/main/default/objects/Contact/fields/SingletrackCMS__Number_of_Failed_Emails__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Number_of_Failed_Emails__c</fullName>
    <label>Number of Failed Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>