force-app/main/default/objects/Contact/fields/SingletrackCMS__One_Access_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__One_Access_Id__c</fullName>
    <label>One Access Reader Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>