force-app/main/default/objects/Contact/fields/SingletrackCMS__Order__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Order__c</fullName>
    <description>Dummy Field to allow custom ordering from Contact_List_Contact__c to be selected as a field on the Call List.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>