force-app/main/default/objects/Contact/fields/SingletrackCMS__Picture__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Picture__c</fullName>
    <formula>IMAGE(IF(ISBLANK(SingletrackCMS__Picture_Attachment_Id__c), &apos;/img/social/unknown_profile_pic.png&apos;, &apos;/servlet/servlet.FileDownload?file=&apos; + SingletrackCMS__Picture_Attachment_Id__c),  LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>