force-app/main/default/objects/Contact/fields/SingletrackCMS__Picture_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Picture_Attachment_Id__c</fullName>
    <label>Picture Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>