force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Admin__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Admin</label>
    <type>Checkbox</type>
</CustomField>