force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Authentication_Token__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Authentication_Token__c</fullName>
    <label>Portal Authentication Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>