force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Force_Password_Change__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Force_Password_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Force Password Change</label>
    <type>Checkbox</type>
</CustomField>