force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Generate_Password_Reset__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Generate_Password_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Generate Password Reset</label>
    <type>Checkbox</type>
</CustomField>