force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Info_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Info_Last_Update__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Portal Info Last Update</label>
    <type>DateTime</type>
</CustomField>