force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Password_Reset_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Password_Reset_Expiry__c</fullName>
    <label>Portal Password Reset Expiry</label>
    <type>DateTime</type>
</CustomField>