force-app/main/default/objects/Contact/fields/SingletrackCMS__Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Portal_Username__c</fullName>
    <label>Portal Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>