force-app/main/default/objects/Contact/fields/SingletrackCMS__Provides_Feedback__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Provides_Feedback__c</fullName>
    <label>Provides Feedback?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>