force-app/main/default/objects/Contact/fields/SingletrackCMS__Region__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Rest of World</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>