force-app/main/default/objects/Contact/fields/SingletrackCMS__Research_Distribution_Address__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Research_Distribution_Address__c</fullName>
    <label>Research Distribution Address</label>
    <type>Email</type>
</CustomField>