force-app/main/default/objects/Contact/fields/SingletrackCMS__Research_Exchange_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Research_Exchange_Id__c</fullName>
    <label>Research Exchange Reader Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>