force-app/main/default/objects/Contact/fields/SingletrackCMS__ResearchTree_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__ResearchTree_Id__c</fullName>
    <label>ResearchTree Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>