force-app/main/default/objects/Contact/fields/SingletrackCMS__SF_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__SF_Full_Address__c</fullName>
    <formula>IF(ISBLANK(SingletrackCMS__Address_Line_1__c) , &apos;&apos; , SingletrackCMS__Address_Line_1__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__Address_Line_2__c) , &apos;&apos; , &quot;,&quot;+SingletrackCMS__Address_Line_2__c)
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__Address_Line_3__c) , &apos;&apos; , &quot;,&quot;+SingletrackCMS__Address_Line_3__c)
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__Address_City__c) , &apos;&apos; , &quot;,&quot;+SingletrackCMS__Address_City__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__Address_County__c) , &apos;&apos; , &quot;,&quot;+SingletrackCMS__Address_County__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__Address_Country__c) , &apos;&apos; , &quot;,&quot;+SingletrackCMS__Address_Country__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__Address_Postal_Code__c) , &apos;&apos; , &quot;,&quot;+SingletrackCMS__Address_Postal_Code__c)</formula>
    <label>SF Full Address</label>
    <type>Text</type>
</CustomField>