force-app/main/default/objects/Contact/fields/SingletrackCMS__Singletrack_Readership_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Singletrack_Readership_Id__c</fullName>
    <label>Singletrack Readership Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>