force-app/main/default/objects/Contact/fields/SingletrackCMS__Sites_User_Reference__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Sites_User_Reference__c</fullName>
    <description>UID to identify Contact within a Force.com Site</description>
    <label>Sites User Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>