force-app/main/default/objects/Contact/fields/SingletrackCMS__Smart_Reader_Account_AND_Contact__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Smart_Reader_Account_AND_Contact__c</fullName>
    <formula>IF(Account.SingletrackCMS__Enable_Smart_Reader__c == TRUE &amp;&amp; SingletrackCMS__Enable_Smart_Reader__c == TRUE, TRUE, FALSE)</formula>
    <label>Smart Reader Account AND Contact</label>
    <type>Checkbox</type>
</CustomField>