force-app/main/default/objects/Contact/fields/SingletrackCMS__Smart_Reader_Permissions__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Smart_Reader_Permissions__c</fullName>
    <label>Smart Reader Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Copy-Paste</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Related-Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>