force-app/main/default/objects/Contact/fields/SingletrackCMS__ST_Analyst_Codes__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__ST_Analyst_Codes__c</fullName>
    <label>Analyst Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>