force-app/main/default/objects/Contact/fields/SingletrackCMS__Start_Research_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Start_Research_Distribution__c</fullName>
    <label>Start Research Distribution</label>
    <type>Date</type>
</CustomField>