force-app/main/default/objects/Contact/fields/SingletrackCMS__Stop_Research_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Stop_Research_Distribution__c</fullName>
    <label>Stop Research Distribution</label>
    <type>Date</type>
</CustomField>