force-app/main/default/objects/Contact/fields/SingletrackCMS__Suspend_Account_Research_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Suspend_Account_Research_Distribution__c</fullName>
    <formula>Account.SingletrackCMS__Suspend_Research_Distribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspend Account Research Distribution</label>
    <type>Checkbox</type>
</CustomField>