force-app/main/default/objects/Contact/fields/SingletrackCMS__Suspend_Research_Distribution__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Suspend_Research_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Research Distribution</label>
    <type>Checkbox</type>
</CustomField>