force-app/main/default/objects/Contact/fields/SingletrackCMS__Test_Enhanced_Viewer_Optin__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Test_Enhanced_Viewer_Optin__c</fullName>
    <formula>SingletrackCMS__Account_Tier__c == &apos;Gold&apos;</formula>
    <label>Test Enhanced Viewer Optin</label>
    <type>Checkbox</type>
</CustomField>