force-app/main/default/objects/Contact/fields/SingletrackCMS__Test_Primary_Analyst__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Test_Primary_Analyst__c</fullName>
    <label>Test Primary Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>