force-app/main/default/objects/Contact/fields/SingletrackCMS__Test_Primary_Company__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Test_Primary_Company__c</fullName>
    <label>Test Primary Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>