force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Address_1__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Address_1__c</fullName>
    <label>Third Party Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>