force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Address_Difference_Field__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Address_Difference_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Address Difference Field</label>
    <type>Checkbox</type>
</CustomField>