force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Biography__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Biography__c</fullName>
    <label>Third Party Biography</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>