force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_City__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_City__c</fullName>
    <label>Third Party City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>