force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Contact_ID__c</fullName>
    <label>Third Party Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>