force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Contact_Name__c</fullName>
    <formula>IF(ISBLANK(SingletrackCMS__TR_First_Name__c) , &quot;&quot; , SingletrackCMS__TR_First_Name__c )
&amp;
IF(ISBLANK(SingletrackCMS__TR_Middle_Initial__c) , &quot;&quot; ,&quot; &quot; &amp; SingletrackCMS__TR_Middle_Initial__c )
&amp;
IF(ISBLANK(SingletrackCMS__TR_Last_Name__c) , &quot;&quot;, &quot; &quot; &amp; SingletrackCMS__TR_Last_Name__c )</formula>
    <label>Third Party Contact Name</label>
    <type>Text</type>
</CustomField>