force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Data_Empty__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Data_Empty__c</fullName>
    <formula>IF( AND( (SingletrackCMS__TR_Phone__c == null) , (SingletrackCMS__TR_Fax__c == null) , (SingletrackCMS__TR_Job_Title__c == null) , (SingletrackCMS__TR_Email_Address__c == null) , (SingletrackCMS__TR_Full_Address__c == null) , (SingletrackCMS__TR_Contact_Name__c == null)) == true , &apos;true&apos; , &apos;false&apos; )</formula>
    <label>Third Party Data Empty</label>
    <type>Text</type>
</CustomField>