force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Education_History__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Education_History__c</fullName>
    <label>Third Party Education History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>