force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Email_Address__c</fullName>
    <label>Third Party Email Address</label>
    <type>Email</type>
</CustomField>