force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Fax2__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Fax2__c</fullName>
    <label>Third Party Fax</label>
    <type>Phone</type>
</CustomField>