force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Fax__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Fax__c</fullName>
    <formula>IF(NOT(ISBLANK(SingletrackCMS__TR_Fax2__c)), SingletrackCMS__TR_Fax2__c,
     IF(
     BEGINS(SingletrackCMS__TR_Fax_Country_Code__c , &apos;+&apos;) , 
     IF(
          BEGINS(SingletrackCMS__TR_Fax_Area_Code__c, &apos;0&apos;) ,  
          SingletrackCMS__TR_Fax_Country_Code__c +&quot;&quot;+ RIGHT(SingletrackCMS__TR_Fax_Area_Code__c, LEN(SingletrackCMS__TR_Fax_Area_Code__c) -1),
          SingletrackCMS__TR_Fax_Country_Code__c +&quot;&quot;+SingletrackCMS__TR_Fax_Area_Code__c
      ) ,
     SingletrackCMS__TR_Fax_Country_Code__c +&quot;&quot;+ RIGHT(SingletrackCMS__TR_Fax_Area_Code__c, LEN(SingletrackCMS__TR_Fax_Area_Code__c) -1)
) 

+&quot;&quot;+

IF(ISBLANK(SingletrackCMS__TR_Fax_Number__c) , &apos;&apos;, SingletrackCMS__TR_Fax_Number__c ))</formula>
    <label>Third Party Fax</label>
    <type>Text</type>
</CustomField>