force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Fax_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Fax_Country_Code__c</fullName>
    <label>Third Party Fax Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>