force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Fax_Number__c</fullName>
    <label>Third Party Fax Number</label>
    <type>Phone</type>
</CustomField>