force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_First_Name__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_First_Name__c</fullName>
    <label>Third Party First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>