force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Full_Address__c</fullName>
    <formula>IF(ISBLANK(SingletrackCMS__TR_Address_1__c) , &apos;&apos; , SingletrackCMS__TR_Address_1__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__TR_Address_2__c) , &apos;&apos; , &quot;, &quot;+SingletrackCMS__TR_Address_2__c)
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__TR_Address_3__c) , &apos;&apos; , &quot;, &quot;+SingletrackCMS__TR_Address_3__c)
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__TR_City__c) , &apos;&apos; , &quot;, &quot;+SingletrackCMS__TR_City__c)
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__TR_State__c) , &apos;&apos; , &quot;, &quot;+SingletrackCMS__TR_State__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__TR_Country__c) , &apos;&apos; , &quot;, &quot;+SingletrackCMS__TR_Country__c )
+&quot;&quot;+ 
IF(ISBLANK(SingletrackCMS__TR_Zip_Code__c) , &apos;&apos; , &quot;, &quot;+SingletrackCMS__TR_Zip_Code__c)</formula>
    <label>Third Party Full Address</label>
    <type>Text</type>
</CustomField>