force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Function__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Function__c</fullName>
    <label>Third Party Function</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>