force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Industry_Specialities__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Industry_Specialities__c</fullName>
    <label>Third Party Industry Specialities</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>