force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Investment_Style__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Investment_Style__c</fullName>
    <label>Third Party Investment Style</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>