force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Job_Title__c</fullName>
    <label>Third Party Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>