force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Macro_Sector__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Macro_Sector__c</fullName>
    <label>Third Party Macro Sector</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>