force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Market_Cap_Specialities__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Market_Cap_Specialities__c</fullName>
    <label>Third Party Market Cap Specialities</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>