force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Metro_Area__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Metro_Area__c</fullName>
    <label>Third Party Metro Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>