force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Middle_Initial__c</fullName>
    <label>Third Party Middle Initial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>