force-app/main/default/objects/Contact/fields/SingletrackCMS__TR_Name_Difference__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__TR_Name_Difference__c</fullName>
    <formula>IF(SingletrackCMS__TR_Name_Difference_Field__c, &apos;true&apos;, &apos;false&apos;)</formula>
    <label>Third Party Name Difference</label>
    <type>Text</type>
</CustomField>